Refactor: code review follow-ups (security, N+1, idempotency, validation)
Security & input handling
- SecurityConfig: drop /h2-console/** from permitAll (still disabled in yaml)
- IdempotencyAspect: cap Idempotency-Key length, replace IllegalStateException with CustomException
- KeycloakRoleConverter: guard unchecked cast, filter non-String roles
- FileServiceImpl: sanitize originalFilename (path traversal, NUL, length cap)
- FileServiceImpl: enforce SSE-S3 (AES256) + Content-Disposition: attachment
- FileServiceImpl: reject NUL/ELF/Mach-O/PE/Java magic for text/plain uploads
- FileController.upload: @RateLimit(file-upload, 10/min) via Redis-backed AOP

Validation
- ReportProcessRequest.action: String -> ReportAction enum
- BoardController.searchType: String -> SearchType enum
- AdminController/PostController: @Validated + @Size/@Min/@Max on params
- DTO @Size additions: NoticeCreate.content, InquiryCreate.fileIds,
  InquiryReply.content, RequestCreate.reason, SuspendRequest.reason,
  UserUpdate.profileImageUrl @URL
- GlobalExceptionHandler: map ConstraintViolation/HandlerMethodValidation/
  TypeMismatch/HttpMessageNotReadable/MissingParam/MethodNotSupported -> 400

JPA / N+1
- AdminServiceImpl.processReport eager-validates action then uses
  PostReportRepository.findByIdWithPostAndUser fetch join
- AdminServiceImpl.replyInquiry uses InquiryRepository.findByIdWithUser
- AdminServiceImpl.getUsers batches active suspensions via
  UserSuspensionRepository.findActiveSuspendedUserIds
- CommentServiceImpl.getByPost loads replies once via
  CommentRepository.findByParentIdInAndDeletedAtIsNullOrderByParentIdAscCreatedAtAsc
- UserServiceImpl.getMyInfo uses findByUserIdWithSport + batched team-name lookup
- AdminServiceImpl.unsuspendUser logs admin actor for audit trail

Idempotency hardening
- IdempotencyService API: tryClaim/getExistingResponse/isInFlight/
  saveResponse/releaseClaim (replaces isDuplicate)
- Redis path uses SETNX with placeholder to close TOCTOU window;
  i